default/deluge/deluge-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: deluge
  namespace: default
spec:
  ports:
    - name: deluge
      port: 8112
      protocol: TCP
      targetPort: 8112
  type: ClusterIP
  selector:
    app: deluge
