default/deluge/deluge-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: deluge
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: deluge.internal.home.alan-jenkins.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: deluge
              servicePort: 8112
